<resources>
    <string name="app_name">MyNewProject</string>
    <string name="profil_tool">My Profile</string>
    <string name="profil2">My Profile</string>
    <string name="login_tool">Login Page</string>
    <string name="Home">List Songs</string>
    <string name="music">Music</string>
    <string name="profil">PROFILE</string>
    <string name="player">Now Playing</string>
    <string name="login">LOGIN</string>
    <string name="yohana_cindy_elsanjaya">Yohana Cindy Elsanjaya</string>
    <string name="nim">NIM </string>
    <string name="nama">Nama</string>
    <string name="kelas">Kelas</string>
    <string name="_000000030706">30706</string>
    <string name="cindy">Cindy</string>
    <string name="fl">FL</string>
    <string name="referensi">Referensi</string>
    <string name="youtube">Youtube</string>
    <string name="https_inwepo_co_cara_menghilangkan_action_bar_di_android_studio">https://inwepo.co/cara-menghilangkan-action-bar-di-android-studio/</string>
    <string name="enter_username">Enter Username</string>
    <string name="submit">Submit</string>
    <string name="enter_password">Enter Password</string>
</resources>